[gd_scene load_steps=4 format=2]

[ext_resource path="res://MusicMaker.gd" type="Script" id=1]
[ext_resource path="res://sfx/drumstick_hit.mp3" type="AudioStream" id=2]
[ext_resource path="res://note_images/staff_bg.jpg" type="Texture" id=3]

[node name="MusicMaker" type="Node2D"]
script = ExtResource( 1 )

[node name="FeedbackLabel" type="RichTextLabel" parent="."]
margin_left = 34.8284
margin_top = 489.334
margin_right = 1072.83
margin_bottom = 668.334
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MyChordLabel" type="RichTextLabel" parent="."]
margin_left = 95.6372
margin_top = 287.643
margin_right = 555.637
margin_bottom = 322.643
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "chord name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="MetronomePlayer" type="AudioStreamPlayer" parent="Timer"]
stream = ExtResource( 2 )

[node name="StaffBackground" type="Sprite" parent="."]
position = Vector2( 486.094, 281.604 )
scale = Vector2( 2.40164, 2.36974 )
z_index = -1
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="TargetLine" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 500 )
default_color = Color( 0, 0, 0, 1 )

[node name="ScoreLabel" type="RichTextLabel" parent="."]
margin_left = -2.0
margin_top = 62.0
margin_right = 265.0
margin_bottom = 92.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SongSelectMenuButton" type="MenuButton" parent="."]
margin_left = 397.692
margin_top = 24.1215
margin_right = 673.692
margin_bottom = 58.1215
action_mode = 1
text = "Pick Song"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartSongButton" type="Button" parent="."]
margin_left = 609.401
margin_top = 29.5212
margin_right = 705.401
margin_bottom = 49.5212
focus_mode = 0
enabled_focus_mode = 0
text = "(re)Start song"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="StartSongButton" to="." method="_on_Button_pressed"]
